add preend mainCreatorPage

--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -12,6 +12,9 @@
 
     
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
+    
+    
+    <script src="https://kit.fontawesome.com/185cad9bb6.js" crossorigin="anonymous"></script>
 
     <style>
 
@@ -129,7 +132,7 @@
 
      
 
-       <div id="MainWindowContainer" class="container rounded bg-white " style="display: inline-block!important;" w3-inslude-html="template.html">
+       <div id="MainWindowContainer" class="container rounded bg-white " style="" w3-inslude-html="template.html">
 
         </div>
     </div>
