--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -1,8 +1,8 @@
 <h1>Заказы в работе</h1>
 
-<div class="align-text-top">
+<div class="center">
 
-    <div class="col-sm-9 scrollspy-example">
+    <div class="col-sm-9 scrollspy-example" style="margin: auto">
         <div class="container">
             <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
                 <thead>
@@ -173,91 +173,86 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="d-flex flex-row" style="margin-top: 20px">
+
+        <div class="shadow-none p-3 mb-5 bg-light rounded" style="width: 45%; margin: auto">
+            <h1>Отзывы</h1>
+            <div class="col-sm-8 scrollspy-example shadow p-3 mb-5 bg-body rounded" style="margin: auto">
 
 
-        <div class="col-sm-4 scrollspy-example" style="margin-top: 20px">
-            <div class="container">
-                <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
-                    <thead>
-                        <tr>
-                            <th class="col-xs-3">ID Запроса</th>
-                            <th class="col-xs-3">ID Товара</th>
-                            <th class="col-xs-3">Кол-во шт</th>
-                            <th class="col-xs-3">Заказчик</th>
+                <div class="d-flex flex-row" style="padding-bottom: 10px;">
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="col-xs-3">123441</td>
-                            <td class="col-xs-3">Сделеать стул</td>
-                            <td class="col-xs-6">2</td>
-                            <td class="col-xs-3">@idЗаказчика</td>
+                    <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="70" height="58" class="d-inline-block align-text-top">
+                    <div style="width: 100%; height: auto">
+                        <h4 style="margin-left: 5%"> User Name</h4>
+                        <div style="margin-left: 5%">
+                            <i class="fa-solid fa-star colorStarTrue"></i>
+                            <i class="fa-solid fa-star colorStarTrue"></i>
+                            <i class="fa-solid fa-star colorStarTrue"></i>
+                            <i class="fa-solid fa-star colorStarTrue"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </div>
 
-                        </tr>
-                        <tr>
-                            <td class="col-xs-3">123441</td>
-                            <td class="col-xs-3">Сделеать стул</td>
-                            <td class="col-xs-6">2</td>
-                            <td class="col-xs-3">@idЗаказчика</td>
+                </div>
 
-                        </tr>
-                        <tr>
-                            <td class="col-xs-3">123441</td>
-                            <td class="col-xs-3">Сделеать стул</td>
-                            <td class="col-xs-6">2</td>
-                            <td class="col-xs-3">@idЗаказчика</td>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta fugit minus optio alias dolorum sapiente, facere iusto recusandae quo amet, asperiores deserunt, doloribus atque dolore saepe neque perspiciatis reprehenderit doloremque!
+                </p>
+                <style>
+                    .colorStarTrue {
 
-                        </tr>
+                        font-weight: 900;
+                        color: #f8ce0b;
+                    }
 
-                    </tbody>
-                </table>
+                </style>
             </div>
         </div>
 
+        <div class="shadow-none p-3 mb-5 bg-light rounded" style="width: 45%; margin: auto">
+            <h1>Запросы</h1>
+            <div class="col-sm-12 scrollspy-example shadow p-3 mb-5 bg-body rounded " style="margin: auto">
+                <h1></h1>
+                <div class="container">
+                    <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
+                        <thead>
+                            <tr>
+                                <th class="col-xs-3">ID Запроса</th>
+                                <th class="col-xs-3">ID Товара</th>
+                                <th class="col-xs-3">Кол-во шт</th>
+                                <th class="col-xs-3">Заказчик</th>
 
-        <div class="col-sm-5 scrollspy-example" style="margin-top: 20px">
-            <div class="container">
-                <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
-                    <thead>
-                        <tr>
-                            <th class="col-xs-3">ID Запроса</th>
-                            <th class="col-xs-3">ID Товара</th>
-                            <th class="col-xs-3">Кол-во шт</th>
-                            <th class="col-xs-3">Заказчик</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="col-xs-3">123441</td>
+                                <td class="col-xs-3">Сделеать стул</td>
+                                <td class="col-xs-6">2</td>
+                                <td class="col-xs-3">@idЗаказчика</td>
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="col-xs-3">123441</td>
-                            <td class="col-xs-3">Сделеать стул</td>
-                            <td class="col-xs-6">2</td>
-                            <td class="col-xs-3">@idЗаказчика</td>
+                            </tr>
+                            <tr>
+                                <td class="col-xs-3">123441</td>
+                                <td class="col-xs-3">Сделеать стул</td>
+                                <td class="col-xs-6">2</td>
+                                <td class="col-xs-3">@idЗаказчика</td>
 
-                        </tr>
-                        <tr>
-                            <td class="col-xs-3">123441</td>
-                            <td class="col-xs-3">Сделеать стул</td>
-                            <td class="col-xs-6">2</td>
-                            <td class="col-xs-3">@idЗаказчика</td>
+                            </tr>
+                            <tr>
+                                <td class="col-xs-3">123441</td>
+                                <td class="col-xs-3">Сделеать стул</td>
+                                <td class="col-xs-6">2</td>
+                                <td class="col-xs-3">@idЗаказчика</td>
 
-                        </tr>
-                        <tr>
-                            <td class="col-xs-3">123441</td>
-                            <td class="col-xs-3">Сделеать стул</td>
-                            <td class="col-xs-6">2</td>
-                            <td class="col-xs-3">@idЗаказчика</td>
+                            </tr>
 
-                        </tr>
-
-                    </tbody>
-                </table>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-
-
     </div>
 
 </div>
@@ -273,6 +268,7 @@
 
 </script>
 
+
 <style>
     .scrollspy-example {
         position: relative;
@@ -284,6 +280,18 @@
         width: 100%;
         background-color: #f3f3f3;
 
+    }
+
+    .center {
+        width: 100%;
+        height: auto;
+    }
+
+
+    .img {
+        height: 50px;
+        width: 50px;
+        background-color: aqua;
     }
 
 </style>
