--- a/bizopt/BO/templates/becomeCreatorTemplates/template4.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template4.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="d-flex justify-content-center align-items-center mb-3 mt-5">
-    <h4 class="text-right">Профиль</h4>
+    <h4 class="text-right">Резюме</h4>
   </div>
   <div class="col-md-3 border-right">
     <div class="d-flex flex-column align-items-center text-center py-5">
