--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-row">
     <h1 style="margin: auto">Мои товары</h1>
 
-    <a class="btn btn-primary Btn" role="button" style="margin: auto">Создать товар</a>
+    <a class="btn btn-primary Btnn" role="button" style="margin: auto">Создать товар</a>
 </div>
 <div class="card">
     <div class="card-body">
@@ -169,7 +169,7 @@
 </style>
 
 <script>
-    $('.Btn').on('click', {}, function(inBody) {
+    $('.Btnn').on('click', {}, function(inBody) {
         var xhr = new XMLHttpRequest()
         var index = $(this).index() + 1
         xhr.open('GET', `becomeCreatorTemplates/8/`)
