--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -1,5 +1,9 @@
-<h1>Заказы в работе</h1>
 
+<div class="d-flex flex-row">
+    <h1 style="margin: auto">Заказы в работе</h1>
+
+    <a class="btn btn-primary Btnn" role="button" style="margin: auto">Создать задачу</a>
+</div>
 <div class="center">
 
     <div class="col-sm-9 scrollspy-example" style="margin: auto">
