fixed add cards

--- a/bizopt/BO/templates/becomeCreatorTemplates/template3.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template3.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row">
+<div class="d-flex flex-row" id="product_creator">
     <h1 style="margin: auto">Мои товары</h1>
 
     <a class="btn btn-primary Btnn" role="button" style="margin: auto">Создать товар</a>
