--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -5,61 +5,60 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>BizOpt</title>
-    
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    
+
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-    
-    
+
+
     <script src="https://kit.fontawesome.com/185cad9bb6.js" crossorigin="anonymous"></script>
 
     <style>
-
-        
         .form-control:focus {
             box-shadow: none;
             border-color: #BA68C8
         }
-        
+
         .profile-button {
             background: rgb(99, 39, 120);
             box-shadow: none;
             border: none
         }
-        
+
         .profile-button:hover {
             background: #682773
         }
-        
+
         .profile-button:focus {
             background: #682773;
             box-shadow: none
         }
-        
+
         .profile-button:active {
             background: #682773;
             box-shadow: none
         }
-        
+
         .back:hover {
             color: #682773;
             cursor: pointer
         }
-        
+
         .labels {
             font-size: 14px
         }
-        
+
         .add-experience:hover {
             background: #BA68C8;
             color: #fff;
             cursor: pointer;
             border: solid 1px #BA68C8
         }
-        
+
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             /* display: none; <- Crashes Chrome on hover */
@@ -67,7 +66,7 @@
             margin: 0;
             /* <-- Apparently some margin are still there even though it's hidden */
         }
-        
+
         input[type=number] {
             -moz-appearance: textfield;
             /* Firefox */
@@ -75,111 +74,98 @@
     </style>
 </head>
 
-<body oncontextmenu='return false' class='snippet-body'>
+<body class='snippet-body'>
 
-       
-              <div class="wrapper">
-    <!-- Sidebar  -->
-    <nav id="sidebar">
-      <div class="sidebar-header">
-        <h3>BIZOPT Partners</h3>
-      </div>
 
-      <ul class="list-unstyled components">
-      
-         
-        <li class="Btn">
-          <a href="#">Главная</a>
-        </li>
-        
-       
-        <li class="active Btn">
-          <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой профиль</a>
-          <ul class="collapse list-unstyled" id="homeSubmenu">
-            <li>
-              <a href="#">Данные продавца</a>
-            </li>
-            <li>
-              <a href="#">Пользователи</a>
-            </li>
-            <li>
-              <a href="#">Мои данные</a>
-            </li>
-          </ul>
-        </li>
-     
-        
-        <li class="Btn">
-          <a href="#">Мои товары</a>
-        </li>
-        
-        <li class="Btn">
-          <a href="#">Резюме</a>
-        </li>
-        
-      </ul>
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>BIZOPT Partners</h3>
+            </div>
 
-      <ul class="list-unstyled CTAs">
-       
-        <li>
-          <a href="/" class="article ">Обратно на главую</a>
-        </li>
-      </ul>
-    </nav>
+            <ul class="list-unstyled components">
 
-    <!-- Page Content  -->
-    <div id="content">
 
-     
+                <li class="Btn">
+                    <a href="#">Главная</a>
+                </li>
 
-       <div id="MainWindowContainer" class="container rounded bg-white " style="" w3-inslude-html="template.html">
 
+                <li class="active Btn">
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Мой
+                        профиль</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                        <li>
+                            <a href="#">Данные продавца</a>
+                        </li>
+                        <li>
+                            <a href="#">Пользователи</a>
+                        </li>
+                        <li>
+                            <a href="#">Мои данные</a>
+                        </li>
+                    </ul>
+                </li>
+
+
+                <li class="Btn">
+                    <a href="#">Мои товары</a>
+                </li>
+
+                <li class="Btn">
+                    <a href="#">Резюме</a>
+                </li>
+
+            </ul>
+
+            <ul class="list-unstyled CTAs">
+
+                <li>
+                    <a href="/" class="article ">Обратно на главую</a>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Page Content  -->
+        <div id="content">
+            <div id="MainWindowContainer" class="container rounded bg-white " w3-inslude-html="template.html">
+                
+            </div>
         </div>
     </div>
-  </div>
 
 
 
-  <script type="text/javascript">
-        $(document).ready(function() {
-          $('#sidebarCollapse').on('click', function() {
-            $('#sidebar').toggleClass('active');
-          });
-        });
-
-   
-
-        $(function() {
+    <script type="text/javascript">
+        $(function () {
             var xhr = new XMLHttpRequest()
             xhr.open('GET', 'becomeCreatorTemplates/1/')
-            xhr.onload = function() {
+            xhr.onload = function () {
 
                 $('#MainWindowContainer').html(xhr.response)
             }
             xhr.send()
         });
-        
-        $('.Btn').on('click', {}, function(inBody) {
+
+        $('.Btn').on('click', {}, function (inBody) {
             var xhr = new XMLHttpRequest()
             var index = $(this).index() + 1
             xhr.open('GET', `becomeCreatorTemplates/${index}/`)
-            xhr.onload = function() {
+            xhr.onload = function () {
                 $('#MainWindowContainer').html(xhr.response)
             }
             xhr.send()
         });
-        
-      
-
     </script>
 
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-  
-   
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+        integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous">
+    </script>
+
+
     <style>
-
-
         p {
             font-family: 'Poppins', sans-serif;
             font-size: 1.1em;
@@ -221,7 +207,7 @@
 
 
         .text-sidebar {
-          color: $text-sidebar;
+            color: $text-sidebar;
         }
 
         .wrapper {
@@ -244,7 +230,9 @@
 
         #sidebar .sidebar-header {
             padding: 20px;
-            background:$lila-60 /*#6d7fcc*/;
+            background: $lila-60
+                /*#6d7fcc*/
+            ;
         }
 
         #sidebar ul.components {
@@ -268,7 +256,8 @@
             background: $text-sidebar-hover;
         }
 
-        #sidebar ul li.active>a, a[aria-expanded="true"] {
+        #sidebar ul li.active>a,
+        a[aria-expanded="true"] {
             color: $text-sidebar;
             background: $lila-60;
         }
@@ -326,14 +315,15 @@
             #sidebar {
                 margin-left: -250px;
             }
+
             #sidebar.active {
                 margin-left: 0;
             }
+
             #sidebarCollapse span {
                 display: none;
             }
         }
-    
     </style>
 
 
