--- a/bizopt/BO/templates/becomeCreatorTemplates/template8.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template8.html
@@ -383,7 +383,7 @@
 
             <span>{{error}}</span>
 
-            <button type="submit">
+            <button name="product_creator" type="submit">
                         <i class="fa fa-angle-double-right">Сохранить</i>
             </button>
 
