--- a/bizopt/BO/templates/becomeCreatorTemplates/template8.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template8.html
@@ -403,9 +403,7 @@
     </div>
 </div>
 <script>
-    var inputnum = 0,
-        keynum = 0,
-        currentTab = 0;
+    var inputnum = 0, keynum = 0, currentTab = 0;
 
     function abbInput() {
         inputnum++;
