--- a/bizopt/BO/templates/becomeCreatorTemplates/template8.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template8.html
@@ -1,4 +1,4 @@
-<div class="row d-flex justify-content-center align-items-center" onload="console.log(123)">
+<div class="row d-flex justify-content-center align-items-center">
     <div class="col-md-8">
         <form id="regForm" method="POST">
             <h1 class="mb-5">Создать товар</h1>
