--- a/bizopt/BO/templates/baseResumeCard.html
+++ b/bizopt/BO/templates/baseResumeCard.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="name">{{ creator.first_name }}</div>
-        <div class="about">{{ creator.activity_type }}</div>
+        <div class="about">{{ creator.tag }}</div>
         <div class="social-icons">
           <a href="#" class="fb"><i class="fab fa-facebook-f"></i></a>
           <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
