add status("Запросы") and delete button("Мои товары")

--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -224,8 +224,8 @@
                             <tr>
                                 <th class="col-xs-3">ID Запроса</th>
                                 <th class="col-xs-3">ID Товара</th>
-                                <th class="col-xs-3">Кол-во шт</th>
                                 <th class="col-xs-3">Заказчик</th>
+                                <th class="col-xs-3">Статус</th>
 
                             </tr>
                         </thead>
@@ -233,22 +233,22 @@
                             <tr>
                                 <td class="col-xs-3">123441</td>
                                 <td class="col-xs-3">Сделеать стул</td>
-                                <td class="col-xs-6">2</td>
                                 <td class="col-xs-3">@idЗаказчика</td>
+                                <td class="col-xs-3"><button type="button" class="btn btn-secondary btn-sm">Согласиться</button></td>
 
                             </tr>
                             <tr>
                                 <td class="col-xs-3">123441</td>
                                 <td class="col-xs-3">Сделеать стул</td>
-                                <td class="col-xs-6">2</td>
                                 <td class="col-xs-3">@idЗаказчика</td>
+                                <td class="col-xs-3"><button type="button" class="btn btn-secondary btn-sm">Согласиться</button></td>
 
                             </tr>
                             <tr>
                                 <td class="col-xs-3">123441</td>
                                 <td class="col-xs-3">Сделеать стул</td>
-                                <td class="col-xs-6">2</td>
                                 <td class="col-xs-3">@idЗаказчика</td>
+                                <td class="col-xs-3"><button type="button" class="btn btn-secondary btn-sm">Согласиться</button></td>
 
                             </tr>
 
