fix add product_creator

--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -454,7 +454,7 @@
         x[currentTab].style.display = "none";
         currentTab = currentTab + n;
         if (currentTab === x.length) {
-            document.getElementById('nextBtn').href = "/becomeCreator"
+            document.getElementById('nextBtn').href = "/becomeCreator/"
             document.getElementById('nextBtn').type = "submit"
         }
         showTab(currentTab);
